2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.h:
	  - Rearrange member declarations.
	  - Make AdjustText() private.
	  - Make winCharSet, latexFlag private.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.h, src/filterlatex.cpp:
	  - Make idxVowelToneMark() non-member, as it depends on file-internal
	    static vars.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlatex.h, src/worddef.h, src/filterlatex.cpp:
	  - Move isLongTailChar() to global worddef.h. Rename it to
	    isThaiLongTailChar().
	  - Adjust all calls in filterlatex.cpp accordingly.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Make FilterX::wordBreakStr private and initialized by c-tor.

	* src/filterx.h:
	  - Make FilterX::wordBreakStr private.
	  - Add wordBreakStr arg to c-tor.
	* src/filterlatex.h:
	  - Add wordBreakStr arg to c-tor with default value for LaTeX,
	    so it can be overridden by FilterLambda.
	* src/filterlatex.cpp (FilterLatex::FilterLatex):
	  - Pass the wordBreakStr to FilterX c-tor instead of direct
	    assignment.
	* src/filterlambda.h (FilterLambda::FilterLambda):
	  - Pass Lambda word break string to FilterLatex c-tor instead of
	    direct assignment.
	* src/filterrtf.cpp (FilterRTF::FilterRTF):
	* src/filterhtml.cpp (FilterHtml::FilterHtml):
	  - Pass specific word break string to FilterX c-tor instead of
	    direct assignment.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterrtf.h, src/filterrtf.cpp:
	  - Apply "indent -nut" + manual adjustments.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filterlambda.h, -src/filterlambda.cpp, src/Makefile.am:
	  - Apply "indent -nut" + manual adjustments.
	  - Move FilterLambda member functions to header and make them inline.
	  - Drop empty d-tor.
	  - Remove now-unused filterlambda.h.

2011-12-31  Theppitak Karoonboonyanan  <thep@linux.thai.net>
